src/modes/read_view/ui/snapshots/read_status_bar_element_draw_renders_consistently_status_message_None.snap
---
source: src/modes/read_view/ui/status_bar_element.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 40, height: 10 },
        content: [
            " READ  fetched  fetched 0 posts posts   ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
        ],
        styles: [
            x: 0, y: 0, fg: Rgb(255, 255, 255), bg: Rgb(29, 155, 240), underline: Reset, modifier: BOLD,
            x: 6, y: 0, fg: Rgb(255, 255, 255), bg: Rgb(29, 155, 240), underline: Reset, modifier: NONE,
            x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 40, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
