src/modes/read_view/ui/snapshots/read_status_bar_element_draw_renders_consistently_status_message_Some(NewPostAdded).snap
---
source: src/modes/read_view/ui/status_bar_element.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 40, height: 10 },
        content: [
            "  ✓ SUCCESS   New post added            ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
            "                                        ",
        ],
        styles: [
            x: 0, y: 0, fg: Rgb(255, 255, 255), bg: Rgb(0, 186, 124), underline: Reset, modifier: BOLD,
            x: 13, y: 0, fg: Rgb(255, 255, 255), bg: Rgb(0, 186, 124), underline: Reset, modifier: NONE,
            x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 40, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
