src/modes/read_view/ui/snapshots/render_custom_status_renders_consistently_label_^_^ ALREADY RETWEETED_message_Post was retweeted already_color_#A371F7.snap
---
source: src/modes/read_view/ui/status_bar_element.rs
expression: result
---
Line::from_iter([
    Span::from(" ^_^ ALREADY RETWEETED ").bold(),
    Span::from(" Post was retweeted already "),
]).fg(Color::Rgb(255, 255, 255)).bg(Color::Rgb(163, 113, 247)).left_aligned()
