src/modes/read_view/ui/snapshots/render_custom_status_renders_consistently_label_♡ UNLIKED_message_Like removed_color_#F91880.snap
---
source: src/modes/read_view/ui/status_bar_element.rs
expression: result
---
Line::from_iter([
    Span::from(" ♡ UNLIKED ").bold(),
    Span::from(" Like removed "),
]).fg(Color::Rgb(255, 255, 255)).bg(Color::Rgb(249, 24, 128)).left_aligned()
