src/modes/read_view/ui/snapshots/render_default_status_renders_cosistently.snap
---
source: src/modes/read_view/ui/status_bar_element.rs
expression: result
---
Line::from_iter([
    Span::from(" READ ").bold(),
    Span::from(" fetched  fetched 500 posts posts "),
]).fg(Color::Rgb(255, 255, 255)).bg(Color::Rgb(29, 155, 240)).left_aligned()
